@@ -6,18 +6,18 @@ AUX kmod-static-nodes 584 SHA256 078b07581e63b5113cef9e85da7d5b53e1fbad91d793f7f
 DIST kmod-13.tar.xz 1435864 SHA256 6c36d3abba2f98c84973ae275951c866f8bf304e7356c2fe60633800239d7956 SHA512 6182a043c32944c2dc336101e4d8a9be9ccd0106677f9f7a2e76b83a09ec2fc1333aed9b82773abe09f8adb1771e796690f1610c64b337e21bdabffe76fed434 WHIRLPOOL 95196f4c65fec778727a9b8d0209dcb08e64280b4b5d6e88b5343acb3a360b62c13a0dcf510d3c2080fad4ef1562c5e9fa11f84979d0acee03dab3fac8b3eaac
 DIST kmod-15.tar.xz 1453996 SHA256 e8ef0ea7e1929b46aa681fe6ce58c5e62d0026289026ebfc63abae3b8fd5ca9e SHA512 67a03cabe9d81c14eb0bef20f3c8ff4614418cb2b2c3e1428d8a57399372ecdce6e403399a578d2f62a1ae4b61c83713edd1ad1e31533ea35503c5b11b92c223 WHIRLPOOL 53249d4b29c3added90c7a9e9c2349c3964809f5a8f274b15f06008151d90f4da8c77c02a0062bf6f2ed19d176d7f16b99c82d149a906c7983aeb9f27d391744
 EBUILD kmod-13-r1.ebuild 2214 SHA256 1c49c3d05418621483f8392448f8f5c2353c6bcee5f96a018f033142557b2db2 SHA512 3f61eb1cb9673da22eb4b0edf195d1cf3c18b4dfcac13f714947ba573821f4c38e4c5fc0854fa255055618b6cb8d750bfb6977347207f5d7bb1dd9906ff09537 WHIRLPOOL ce977f64d4eaa6e4d1440c43734d6c29117c74142c1b19b0163248dd3a26dc39130525ec90014653c173d1ae35a902f507e74223b9df2801ac699d75d8ca16ab
-EBUILD kmod-15.ebuild 3558 SHA256 291e05d4d7864cf7fb1818c26d07339c73fc6a6f7e16af7904c28d89a2a07577 SHA512 a7af20bcf87d55392a7a845bf20778a30eb1a8a6fceb8305428514ddf6fe7f80f1ae269bb4d9dd0da4a67f8781acda0f28147e884893e0103f7592e1d1eaf23e WHIRLPOOL 603d4d5a4cf8bf9c5e8fc0afb78653798ab294d454404b3ad6c27c9b8759b59d5146914bbaea35171261b51a8fbbe20724afe2f1232316d91e09a291215dc1e8
-EBUILD kmod-9999.ebuild 3561 SHA256 b91f64d8030369b6e1707d804a7837c00a470e15a517461fcd60d768c935b87b SHA512 b3532cd28e0cdaabf1b6fdab6c616ab1de907e423d76ec01c0b97900144ea32f4b2222311dd8fdf94e14a4f9e0f2a439ec41f08bad6cd39db38ac3f9e09b2886 WHIRLPOOL f7d8b45827345e0a9b1b7570db175fce4a0edeab77768c0b8a75d1f9667b6009d522af8a5e8bbf1dfdc7781d500c3c01decdb1e3d33fa4ce48c708348b2b56e5
-MISC ChangeLog 16524 SHA256 c7be0ee3ede5599b1545f01e862402dd9005f373e85a5466f5f26fde8e582ffc SHA512 8bce650bf01295c59ebd83467aea0c6904890496a7bbc9ebed09fad69c494e5dc23f3a7c27ed5109a7ae75f238ebceabce714943f8b92342efca3b6e9ed14ff1 WHIRLPOOL 529eb80d851c490e570ee4cde5474a3d2222f65551e506dfb9de62eea93f1b9652c31a195d258747b2d55657cbf36c57b9f78b839e5a94f42590bc98c450f3b1
+EBUILD kmod-15.ebuild 3575 SHA256 cad6b67467ceba8f6bec9d3eb50d08d7d457bed8a7b0aeaf7ffd9d9914bfd0f5 SHA512 77003043fdadb612c371eabe32057840c0b8c825f96a19017a2dffba346b71278ed8ff3234c5ea9007b6eac30e3892d19cf469b1bea4ba5dc920d3eacb49c328 WHIRLPOOL 151fb3f7d00b8cd3fb0bef56222627f4b6f305ff982cd3599b9c255688c96ec056027ccf7a5760c338bb65612b85de9ce5b8a70c9068f26d2aaa255cd3b7d24b
+EBUILD kmod-9999.ebuild 3578 SHA256 87af4c2ffc6a408bb3b3d4a8ccc1dfb6e30ec5b6818130ade4c8bbe2045f218c SHA512 aa558f2c4918ea1fc5b23d7d039107f45be74014dd34fdea95dba14dd7e9b65039368a428cb331921046cd8e919eff64eb84bcb8a023e2be1daedf07aa3de21b WHIRLPOOL 2de4f9dbe4371172745c9752a4d72be385530c449c425c71d376ca6dfedad6d66acdb67810c6696522eb9280e1fe228cf9e589922b37d761ea821b51a036935e
+MISC ChangeLog 16701 SHA256 cf01c60d3f6602a431d590d0b690fb0b31cc9e29de9ff684a7c824e4a71b7667 SHA512 5699da1d1c3bb30c817ad7fb4ea592cf15783c2f161e09a9f946c5d4cd71deece2b97bd14a5965a58c2eb96e79b329fcfe050cc5f01783612d50039a2a1e3ee4 WHIRLPOOL 3558ecf4b4a31f2066e15f609b43d847f0af8f10c67b697a56b3922988de159e00e1a4156ffb24a83e93b4290bc0ee854cf611666ae9bb8e5ec031b3a97c4cde
 MISC metadata.xml 376 SHA256 5eb64ba82d456033efa6947dff12b009f73f4e5b4e883841c7fb4c8a368b3e0c SHA512 7dd59b5c777f37c5aa734a81562491ab90e0ed2854340f4d89fd9198d17c8e8d880e8d47ae99dba23b1fb16bc0b711788b7159f77ff53b08a2b2a3af01894f43 WHIRLPOOL d659931a7f525e0453e86a96f2dd6ca889bcf428496f1510bb612251961dac7afa5c36b87f90947371f4903c84b5cabf42d7647cfbbbf7af3e24396107a7197f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSGhs7AAoJEEdUh39IaPFNarkH/RCD9nfPxZUUCPmUF3ffZWER
-vvF0t/gjJ/aoMFXp3CBMvVWjWIoDkMwnlz0RqNn71FgRK0ncPOAiauxuuna9zPMI
-yJfFkn69ORUbiRBvsYGv+Z0AaovbQO0QD0rzj7Ses4K3vWmy1X/ASzZE6PLUuo6L
-fMTDm2uumoBaHp5KtsIY/ctgWvyhFMiBTivZBSfKKtRYdUzUzvYVv6sl9zQ5DLSc
-PkCij4t+WrbNsnZoNGWWriyZrptbL22RJ0ej2lRkEeIl5GBrNJmy2N3KyslLB16d
-pGvccQHbt73Y9/5Aqz5QDc4gnfNsSQW3i8tz+8VJkGk856b5L/FKEjDKGCpuHa0=
-=HaZm
+iQEcBAEBCAAGBQJSOwK6AAoJEEdUh39IaPFNDc0H/RLy5Psq4IzrP0mA7jWejqOg
+HQEhv14EZp6st7XO5n8ROyQVUlITwFrIZBTvTfV4OgE3qpZv3mtMitOMIPjsDj2P
+ngty+pgzyi87A2mcQMV6RIxNE4/YJMd4pD37u7DdUPAOLxa8H+oUgNj7kSV1SJcV
+FBs25gn3zwAPw59DmatYlSomfWdKve+B38YvlW/6vbb4vVL9dwGtmu65HLKM/y++
+7QmUDBskmQFFpfEu6Y1WTpgcZo/J3BLAobgB7jHEviVoPLdOfROgRUJW5z6aGuKo
+MN+qBow9/G4h+goA32a+MnRL6NbOkfTiOhwXWNxqRxM37M6mjuyq109dPcSsusQ=
+=EQ2V
 -----END PGP SIGNATURE-----
